Resolve annotation processor warning